<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#1e1e1e"
    android:id="@+id/navigation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/logo_experto"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:src="@drawable/generic_img_logo_experto"
        android:layout_gravity="center"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@null"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"/>
        <TextView
            android:id="@+id/text_name"
            android:textSize="18sp"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/text_example_name"
            android:textColor="@color/white"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/enterprise_container"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/text_expert"
            android:layout_weight="0.8"
            android:text="@string/text_example_brand"
            android:fontFamily="@font/gotham_bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:background="#626262"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@null"
            android:id="@+id/profile_ic"
            android:src="@drawable/ic_settings"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/profile_text"
            android:layout_weight="0.8"
            android:text="@string/text_profile_option"
            android:fontFamily="@font/gotham_book"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:background="#626262"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/time_container"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@null"
            android:src="@drawable/ic_timer"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="0.5"
            android:text="@string/text_time_study"
            android:fontFamily="@font/gotham_book"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/text_time"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/gotham_book"
            android:textColor="#FFD200"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_study_time_value"/>
    </LinearLayout>

    <View
        android:background="#626262"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="center"
        android:id="@+id/button_close_session"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/generic_black_button_border_yellow"
        android:drawableStart="@drawable/ic_close_session"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:drawablePadding="@dimen/_16sdp"
        android:text="@string/text_close_session"
        android:textColor="@color/white" />
</LinearLayout>