<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/delo_gradient_background">

    <LinearLayout
        android:id="@+id/linear_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/text_sigin"
            android:textAlignment="center"
            android:textColor="#00D4FF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center"
            android:id="@+id/text_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_book"
            android:text="@string/label_cellphone_number"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:src="@drawable/ic_car_cellphone_login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/generic_textview_background_white"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp">

            <Spinner
                android:id="@+id/spn_countries"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:spinnerMode="dialog" />

            <View
                android:id="@+id/view_separator"
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@+id/spn_countries"
                android:background="#B1B1B1" />

            <EditText
                android:id="@+id/textCellphone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/view_separator"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/gotham_book"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </RelativeLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/chevron_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:src="@drawable/generic_img_logo_chevron" />

    <androidx.appcompat.widget.AppCompatButton
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/btn_next"
        style="@style/GenericButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chevron_logo"
        android:layout_marginBottom="32dp"
        android:background="@drawable/generic_blue_button"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/text_next" />


</RelativeLayout>

